--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "canvas": "^2.6.1",
     "discord.js": "^11.6.1",
     "dotenv": "^8.2.0"
   },
