--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "ffmpeg-static": "^4.0.1",
     "fuse.js": "^3.4.6",
     "request": "^2.88.2",
-    "ytdl-core": "^2.0.0"
+    "ytdl-core": "^2.0.0",
+    "ytsr": "^0.1.10"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
