--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "lint": "eslint index.js"
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -15,6 +15,7 @@
     "@discordjs/opus": "^0.1.0",
     "discord.js": "^12.0.2",
     "dotenv": "^8.2.0",
+    "eslint": "^6.8.0",
     "ffmpeg-static": "^4.0.1",
     "fuse.js": "^3.4.6",
     "request": "^2.88.2",
