--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   },
   "dependencies": {
     "@discordjs/opus": "^0.1.0",
+    "axios": "^0.19.2",
     "discord.js": "^12.0.2",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "ffmpeg-static": "^4.0.1",
     "fuse.js": "^3.4.6",
-    "request": "^2.88.2",
     "ytdl-core": "^2.0.0",
     "ytsr": "^0.1.10"
   },
